--- a/views/account.ejs
+++ b/views/account.ejs
@@ -1,2 +1,3 @@
-<p>Error: Access denied: </p>
+<p>ID: <%= user.identifier %></p>
+<p>Name: <%= user.displayName %></p>
 <p>Email: <%= user.emails[0].value %></p>
